add readme instructions