@@ -1,2 +1,31 @@
 # gestion-stock
-// --module-path "C:\Users\Foxinow\eclipse-workspace\Lib\javafx-sdk-11.0.2\lib" --add-modules=javafx.controls,javafx.fxml
+
+==================
+Installation Guide 
+==================
+
+- Install server management service (easyphp or wampServer or apache with phpmyadmin)
+- Run server service (ex ubuntu-apache : sudo service apache2 start)
+- Go to phpmyadmin (127.0.0.1), create database with this name : stock_magasin
+- Inside file "stock_magasin.sql" copy all sql lines
+- Go to phpmyadmin and go to your new database
+- Go to SQL tab
+- Paste sql lines in the field and execute
+
+- Install java runtime 8 or 11 (jre 8 or 11) 
+
+The application is now usable
+WINDOWS : double-clic jar file on windows
+UBUNTU : java -jar Stock_Management.jar
+
+
+
+==========
+User Guide
+==========
+
+By default you have somes users
+You can login with administrator user (login : admin / password : admin)
+With this count, you see all user and manage all what you want
+You can manage article and manage users
+The application is simple and easy to use, but you can find more informations in "cahier des specifications.pdf"
